# stella

./: .dockerignore  .env.example  .gitignore  BRANCH_SPLIT_PLAN.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIGURATION_SUMMARY.md  CONTRIBUTING.md  DEBUG_DEPLOYMENT.sh  DEBUG_GPU_DETAILED.sh  DEBUG_GPU_K3S.sh  DESIGN_SYSTEM.md  Dockerfile  FIX_GPU_INSTALLATION.sh  K8S_DISTRIBUTION_AUTO_SELECTION.md  LICENSE  MIGRATION-CLEAN-INSTALL.md  NOTICE.md  PRODUCTION_CHECKLIST.md  README.md  RELEASING.md  SECURITY.md  STELLA Design System.html  package-lock.json  package.json  prisma.config.ts  reworked_plan.json  reworked_plan_de.json  tsconfig.build.json  tsconfig.json  verify-all-actors.sh  voice-assistant-sunny-final.html
agents/echo-agent/: Dockerfile  agent.yaml  pyproject.toml
agents/echo-agent/src/echo_agent/: __init__.py  __main__.py  agent.py  main.py
agents/grace-agent/: AGENT_ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml
agents/grace-agent/config/plans/: cognitive_stimulation_demo_sm.json
agents/grace-agent/src/grace_agent/: __init__.py  __main__.py  agent.py  main.py
agents/grace-agent/src/grace_agent/adapters/: __init__.py  progress_adapter.py
agents/grace-agent/src/grace_agent/llm/: __init__.py
agents/grace-agent/src/grace_agent/models/: __init__.py  state_machine.py  todo_list.py
agents/grace-agent/src/grace_agent/pipeline/: __init__.py  aggregator.py  expert_pool.py  input_gate.py
agents/grace-agent/src/grace_agent/prompts/: __init__.py  builder.py  components.py
agents/grace-agent/src/grace_agent/state_machine/: __init__.py  engine.py  execution_state.py
agents/stella-ai-agent-sdk/: README.md  pyproject.toml
agents/stella-ai-agent-sdk/examples/: echo_agent.py  openai_agent.py
agents/stella-ai-agent-sdk/proto/: agent.proto  stt.proto  tts.proto
agents/stella-ai-agent-sdk/src/stella_agent_sdk/: __init__.py  env.py  language.py  run.py
agents/stella-ai-agent-sdk/src/stella_agent_sdk/_grpc/: __init__.py  agent_pb2.py  agent_pb2.pyi  agent_pb2_grpc.py  state_machine_pb2.py  state_machine_pb2.pyi  state_machine_pb2_grpc.py  stt_pb2.py  stt_pb2_grpc.py  tts_pb2.py  tts_pb2_grpc.py
agents/stella-ai-agent-sdk/src/stella_agent_sdk/agent/: __init__.py  barge_in_evaluator.py  base.py
agents/stella-ai-agent-sdk/src/stella_agent_sdk/audio/: __init__.py  pipeline.py
agents/stella-ai-agent-sdk/src/stella_agent_sdk/livekit/: __init__.py  room.py
agents/stella-ai-agent-sdk/src/stella_agent_sdk/llm/: __init__.py  service.py
agents/stella-ai-agent-sdk/src/stella_agent_sdk/messages/: __init__.py  input.py  output.py  types.py
agents/stella-ai-agent-sdk/src/stella_agent_sdk/plan/: __init__.py  migration.py  types.py
agents/stella-ai-agent-sdk/src/stella_agent_sdk/progress/: __init__.py  builder.py  types.py
agents/stella-ai-agent-sdk/src/stella_agent_sdk/prompts/: __init__.py  base.py  placeholder_compiler.py  registry.py  template.py
agents/stella-ai-agent-sdk/src/stella_agent_sdk/services/: __init__.py  agent_server_client.py  history_client.py  state_machine_client.py  (+2 more)
agents/stella-ai-agent-sdk/tests/: __init__.py  test_barge_in.py  test_base_agent.py  test_floor_hold_236.py  test_latency_budget.py  test_llm_stream.py  test_messages.py  test_pending_tools.py  test_progress_builder.py  test_prompt_compiler.py  test_sentence_chunking.py  test_session_end.py  test_state_machine_tools.py  test_teleprompter.py  test_text_barge_in.py  test_version.py
agents/stella-light-agent/: Dockerfile  README.md  agent.yaml  pyproject.toml
agents/stella-light-agent/config/: plans
agents/stella-light-agent/config/plans/: cognitive_stimulation_demo_sm.json
agents/stella-light-agent/src/stella_light_agent/: __init__.py  __main__.py  agent.py  barge_in_evaluator.py  main.py  processor.py  tool_processor.py
agents/stella-light-agent/tests/: test_execution_state.py  test_light_language.py  test_prompt_config_overrides.py  test_runtime_variables.py  test_startup_config.py  test_state_machine.py  test_steering_and_skip.py  test_tool_processor_phase_alignment.py
agents/stella-v2-agent/: Dockerfile  agent.yaml  pyproject.toml
agents/stella-v2-agent/config/: llm_config.json
agents/stella-v2-agent/config/experts/: legal.json  medical.json  noise_detection.json  probing.json  task_extraction.json  timekeeper.json
agents/stella-v2-agent/config/study/: README.md  config_a_simple.json  config_b_multi_agent.json  plan_physical_activity_checkin.json
agents/stella-v2-agent/src/stella_v2_agent/: __init__.py  __main__.py  agent.py  main.py  utils.py
agents/stella-v2-agent/tests/: test_arbitration.py  test_barge_in_evaluator.py  test_bridge_generator.py  test_expert_config.py  test_expert_engagement.py  test_expert_engagement_eval.py  test_expert_runner.py  test_input_gate.py  test_language_resolver.py  test_override_emission.py  test_prompt_template.py  test_response_context_reanchor.py  test_response_generator.py  test_startup_config.py  test_task_extraction_prompt.py
archive/agents/stella-agent/: AGENT_ARCHITECTURE.md  pyproject.toml
archive/agents/stella-agent/tests/: test_startup_config.py
(+961 files in other folders)
