[project]
name = "grace-agent"
version = "0.1.0"
description = "Grace AI Agent - Full agent implementation using the Grace AI Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Grace AI Team"}
]

dependencies = [
    "grace-ai-agent-sdk",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
grace-agent = "grace_agent.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
