[project]
name = "stella-v2-agent"
version = "0.1.0"
description = "STELLA V2 Agent - Streamlined 4-stage pipeline with deterministic arbitration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "STELLA Team"}
]

dependencies = [
    "stella-ai-agent-sdk",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
stella-v2-agent = "stella_v2_agent.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
